<resources>
    <string name="facebook_app_id">1374989085933502</string>
    <string name="app_name">JMPro</string>
    <string name="password">Hasło</string>
    <string name="welcome">WITAJ</string>
    <string name="login">Login</string>
    <string name="sign_in">Zaloguj się</string>
    <string name="register_now">Zarejestruj się</string>
    <string name="not_registered_question">Nie masz jeszcze konta?</string>
    <string name="registration">REJESTRACJA</string>
    <string name="repeat_password">Powtórz hasło</string>
    <string name="e_mail">E-mail</string>
    <string name="birth_date">Data urodzenia</string>
    <string name="year">rrrr</string>
    <string name="choose_date">Wybierz datę</string>
    <string name="incorrect_email">Niepoprawny e-mail</string>
    <string name="set_date">Wybierz datę urodzenia</string>
    <string name="passwords_not_matched">Hasła nie są identyczne</string>
    <string name="password_signs">Hasło musi zawierać co najmniej 6 znaków.</string>
    <string name="required">Pole wymagane</string>
    <string name="registered">Zarejestrowano pomyślnie.</string>
    <string name="occupied_login">Ten login jest już zajęty</string>
    <string name="wrong_password">Błędne hasło.</string>
    <string name="menu">MENU</string>
    <string name="settings">Ustawienia konta</string>
    <string name="my_alergy">Mam alergię na:</string>
    <string name="save">Zapisz</string>
    <string name="a_deficiency">Brak alergenu, którego szukasz?</string>
    <string name="a_name">Nazwa alergenu</string>
    <string name="add">Dodaj</string>
    <string name="wrong_credentials">Błędny login lub hasło</string>
    <string name="correct_credentials">Zalogowano pomyślnie</string>
    <string name="db_error">Błąd połączenia z bazą.</string>
    <string name="delete_account">Usuń konto</string>
    <string name="old_password">Stare hasło</string>
    <string name="new_password">Nowe hasło</string>
    <string name="new_email">Nowy e-mail</string>
    <string name="settings_login">Login:</string>
    <string name="password_changed">Hasło zostało zmienione.</string>
    <string name="support_us">Wesprzyj nas</string>
    <string name="select_language">Wybierz język</string>
    <string name="send">Wyślij</string>
    <string name="send_message">WYŚLIJ WIADOMOŚĆ</string>
    <string name="to">Do:</string>
    <string name="your_message">Treść Twojej wiadomości...</string>
    <string name="email_sender">E-mail sender</string>
    <string name="general_settings">Ustawienia ogólne</string>
    <string name="subject">Temat:</string>
    <string name="suggestions">Sugestie</string>
    <string name="ask_for_new_func">Prośba o nową funkcjonalność</string>
    <string name="share_using">Udostępnij za pomocą</string>
    <string name="mailto">mailto:</string>
    <string name="app_mail">appka.inz@gmail.com</string>
    <string name="offer">Sprawdź nową aplikację, naprawdę warto!</string>
    <string name="write_to">Napisz do:</string>
    <string name="offer2">,   a otrzymasz dostęp to tego wspaniałego narzędzia :)   Wypróbuj już teraz!</string>
    <string name="intent_type">text/plain</string>
    <string name="intent_type2">message/rfc822</string>
    <string name="pl">pl</string>
    <string name="en">en</string>
    <string name="warning">Uwaga!</string>
    <string name="are_you_sure">Czy na pewno chcesz usunąć konto?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="cancel">Anuluj</string>
    <string name="are_you_sure2">Czy na pewno chcesz zresetować ustawienia?</string>
    <string name="select_theme">Wybierz motyw</string>
    <string-array name="main_menu_items">
        <item>Mój dziennik</item>
        <item>Alergeny</item>
        <item>Substytuty</item>
        <item>Spis miejsc</item>
        <item>Ustawienia konta</item>
    </string-array>
    <string-array name="theme_names">
        <item>Truskawka</item>
        <item>Jabłko</item>
        <item>Pomarańcza</item>
        <item>Klasyczny</item>
    </string-array>
    <string-array name="general_settings_items">
        <item>Notyfikacje</item>
        <item>Język</item>
        <item>Motyw</item>
        <item>Wyloguj się</item>
    </string-array>
    <string-array name="support_settings_items">
        <item>Napisz do nas</item>
        <item>Poproś o nową funkcję</item>
        <item>Udostępnij znajomym</item>
        <item>Resetuj ustawienia</item>
    </string-array>
    <string-array name="settings_items">
        <item>Alergia</item>
        <item>Dane konta</item>
        <item>Ogólne</item>
        <item>Wsparcie</item>
    </string-array>
    <string-array name="languages">
        <item>polski</item>
        <item>angielski</item>
    </string-array>
    <string-array name="email_subjects">
        <item>Sugestie</item>
        <item>Uwagi</item>
        <item>Inne</item>
    </string-array>
    <string-array name="places_options">
        <item>Ulubione miejsca</item>
        <item>Polecane</item>
        <item>Poleć</item>
    </string-array>
    <string name="title_activity_main_menu_places">MainMenuPlaces</string>
    <string name="title_activity_registration">Registration</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="fav_places">Ulubione miejsca</string>
    <string name="suggested">Polecane</string>
    <string name="suggest">Poleć</string>
    <string name="share">Udostępnij</string>
    <string name="facebook">Facebook</string>
    <string name="messenger">Messenger</string>
    <string name="places">Miejsca</string>
    <string name="playservices_required">Ta zakładka wymaga usługi PlayServices. Chcesz ją zainstalować?</string>
    <string name="continue_with_permissions">Aby kontunuować zezwól na włączenie na urządzeniu lokalizacji w ramach usługi lokalizacyjnej Google.</string>
    <string name="force_memory_permissions">Aby kontynuować należy zezwolić na dostęp do zdjęć, multimediów i plików na Twoim urządzeniu.</string>
    <string name="ok">OK</string>
    <string name="loc_permissions_granted">Uprawnienia dostępu do lokalizacji nadane.</string>
    <string name="mem_permissions_granted">Uprawnienia dostępu do pamięci urządzenia nadane.</string>
    <string name="gps_off">Lokalizacja jest wyłączona.</string>
    <string name="wanna_gps_on">Czy chcesz włączyć lokalizację?</string>
    <string name="cant_get_current_location">Can\'t get current location</string>
    <string name="name">Nazwa</string>
    <string name="add_fav_place">Dodaj miejsce do ulubionych</string>
    <string name="addres">Adres</string>
    <string name="street">ul.</string>
    <string name="add_sug_place">Dodaj miejsce do polecanych</string>
    <string name="nothing">brak</string>
    <string name="sug_positive">Polecono</string>
    <string name="sug_negative">Poleć</string>
    <string name="sug_place">Poleć miejsce</string>
    <string name="select_point">Przesuń pinezkę w wybrane miejsce</string>
    <string name="choose_manually">Wybierz manualnie</string>
    <string name="choosePlace">Wybierz</string>
    <string name="select_place_to_share">Wybierz miejsca, które chcesz udostępnić</string>
    <string name="app_does_not_exist">Aplikacja nie jest zainstalowana</string>
    <string name="want_to_install_question">Czy chcesz ją zainstalować?</string>
    <string name="hangouts">Hangouts</string>
    <string name="addresses">Oto adres/y:</string>
    <string name="recommended_places">Przekonaj się, które miejsca warto odwiedzić :)</string>
    <string name="arrow"><![CDATA[->]]></string>
    <string-array name="substitutes_options">
        <item>Szukaj substytutów</item>
        <item>Dodaj substytuty</item>
    </string-array>
    <string name="title_activity_substitutes">SubstitutesActivity</string>
    <string name="search_sub">Wyszukaj</string>
    <string name="my_substitutes">Moje</string>
    <string name="substitutes">Substytuty</string>
    <string name="go_to_settings">Go to settings and enable permissions</string>
    <string name="title_activity_diary">Diary</string>
    <string name="saved_days">Zapisane dni</string>
    <string name="statistics">Statystyki</string>
    <string name="export_as">Eksportuj jako</string>
    <string name="message">Wiadomość</string>
    <string name="document">Dokument</string>
    <string name="symptoms_diary">Dziennik objawów</string>
    <string name="add_day">Dodaj dzień</string>
    <string name="my_sub">Moje substytuty</string>
    <string name="sub_for">Substytuty dla:</string>
    <string name="sub_search">Wyszukaj substytuty</string>
    <string name="enter_al_name">Wpisz nazwę alergenu</string>
    <string name="allergen">Alergen</string>
    <string name="add_sub">Dodaj substytuty</string>
    <string name="coose_allergen">Wybierz alergen</string>
    <string name="all_name">Nazwa alergenu</string>
    <string name="sub_name">Nazwa substytutu</string>
    <string name="enter_sub_name">Wpisz nazwę subtytutu</string>
    <string name="all_does_not_exist">Allergen o podanej nazwie nie istnieje w bazie</string>
    <string name="press_button">Zatwierdź wybór alergenu przyciskiem</string>
    <string name="substitutes_of">Substytuty allergenu:</string>
    <string name="no_results">Brak wyników wyszukiwania</string>
    <string name="if_definitely">Na pewno chcesz usunąć wybrany element?</string>
    <string name="no_result">Brak wyników</string>
    <string name="suggest_sub">Poleć substytuty alergenów:</string>
    <string name="recommended_sub">Zobacz koniecznie czym możesz zastąpić niektóre składniki :)</string>
    <string name="html_pack"><![CDATA[<font color=\"#3300ff\" face =\"Times New Roman\"><b> Przekonaj się gdzie warto się wybrać! :)]]></string>
    <string name="html_pack_subject">: Polecam Ci nowe miejsca, odwiedź koniecznie! ;)</string>
    <string name="added_suc_allergene">Dodano pomyślnie:</string>
    <string name="eureka">Udało się!</string>
    <string name="success">Zapisano pomyślnie!</string>
    <string name="updated_successful">Zaktualizowano pomyślnie:</string>
    <string name="add_a_to_db">Dodaj alergen do bazy</string>
    <string name="questin_if_want_add_new">Czy chcesz dodać nowy alergen do bazy?</string>
    <string name="if_u_sure">Czy na pewno chcesz usunąć element </string>
    <string name="from_db">z bazy?</string>
    <string name="removed">Usunięto:</string>
    <string name="err_remove_allergens">Możesz usunąć jedynie alergeny dodane przed chwilą.</string>
    <string name="title_activity_main_menu_allergens"> MainMenuAllergens </string>
    <string name="alergens">Alergeny</string>
    <string name="modify">Modyfikuj</string>
    <string name="remove">Usuń</string>
    <string name="settings_allergens">Ustawienia</string>
    <string name="add_allergens_to_db"> Dodaj alergeny do bazy </string>
    <string name="add_to_lit">Dodaj do listy</string>
    <string name="pending">Oczekujące na dodanie do bazy:</string>
    <string name="add_to_db">Dodaj do bazy</string>
    <string name="allergen_exists">Alergen o podanej nazwie już istnieje w bazie</string>
    <string name="u_sure">Czy na pewno chcesz dodać:</string>
    <string name="to_db">do bazy?</string>
    <string name="nothing_to_add_warning">0 elementów do dodania.</string>
    <string name="all">Wszystkie</string>
    <string name="remove_allergens_from_db">Usuń wybrane alergeny z bazy</string>
    <string name="all_allergens">Wszystkie alergeny</string>
    <string name="added_by_me">Alergeny dodane przeze mnie:</string>
    <string name="remove_only_added_by_yourself">Możesz usunąć jedynie alergeny dodane przez siebie.</string>
    <string name="added_">Dodano:</string>
    <string name="save_changes">Chcesz zapisać zmiany?</string>
    <string name="removed_suc">Usunięto pomyślnie</string>
</resources>