<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favourite_places"
            android:icon="@drawable/favourites"
            android:title="@string/fav_places" />
        <item
            android:id="@+id/nav_suggested_places"
            android:icon="@drawable/suggested"
            android:title="@string/suggested" />
        <item
            android:id="@+id/nav_suggest"
            android:icon="@drawable/suggest"
            android:title="@string/suggest" />
    </group>

    <item android:title="@string/share">
        <menu>
            <item
                android:id="@+id/nav_share_hangouts"
                android:icon="@drawable/hangouts"
                android:title="@string/hangouts" />
            <item
                android:id="@+id/nav_share_email"
                android:icon="@drawable/e_mail"
                android:title="@string/e_mail" />
            <item
                android:id="@+id/nav_share_messenger"
                android:icon="@drawable/messenger"
                android:title="@string/messenger" />
            <item
                android:id="@+id/nav_share_facebook"
                android:icon="@drawable/facebook"
                android:title="@string/facebook" />
        </menu>
    </item>

</menu>
