<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dedicated_substitutes"
            android:icon="@drawable/suggested"
            android:title="@string/my_substitutes" />
        <item
            android:id="@+id/nav_search_substitutes"
            android:icon="@drawable/search_single"
            android:title="@string/search_sub" />
        <item
            android:id="@+id/nav_add_substitutes"
            android:icon="@drawable/add_day"
            android:title="@string/add" />
    </group>

    <item android:title="@string/share">
        <menu>
            <item
                android:id="@+id/nav_share_email"
                android:icon="@drawable/e_mail"
                android:title="@string/e_mail" />
            <item
                android:id="@+id/nav_share_messenger"
                android:icon="@drawable/messenger"
                android:title="@string/messenger" />
        </menu>
    </item>

</menu>
