<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_noted_days"
            android:icon="@drawable/my_saved_days"
            android:title="@string/saved_days" />
        <item
            android:id="@+id/nav_add_day"
            android:icon="@drawable/add_day"
            android:title="@string/add_day" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/statistics"
            android:title="@string/statistics" />
    </group>

    <item
        android:id="@+id/share_days"
        android:title="@string/export_as">
        <menu>
            <item
                android:id="@+id/nav_share_message"
                android:icon="@drawable/messenger"
                android:title="@string/message" />
            <item
                android:id="@+id/nav_export_document"
                android:icon="@drawable/export_as_document"
                android:title="@string/document" />
        </menu>
    </item>

</menu>
